<resources>
    <string name="app_name">AdminPanel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="enter_your_name_and_email_to_sign_up">Enter your name and email to sign up</string>
    <string name="email">Email</string>
    <string name="email1">Email :</string>
    <string name="register">Register</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="we_will_send_you_the_4_digit_verification_code">Enter your mobile number for a better way to pick fresh food.</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number1">Mobile Number :</string>
    <string name="generate_otp">GENERATE OTP</string>
    <string name="new_user">New User?</string>
    <string name="register_here">REGISTER HERE</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">password</string>
    <string name="enter_password">Enter password</string>
    <string name="shop_name">shop name</string>
    <string name="enter_shop_name">Enter Shop Name</string>
    <string name="shop_address">shop address</string>
    <string name="enter_shop_address">Enter Shop Flat No,Building Name,Street,Locality</string>
    <string name="enter_gst_number">Enter GST Number</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="enter_shop_pincode">Enter Shop Pincode</string>
    <string name="i_agree_to_the_terms_of_service_and_privacy_policy">I agree to the  </string>
    <string name="and"> and </string>
    <string name="terms_of_service"> Terms of Service </string>
    <string name="privacy_policy"> Privacy Policy </string>
    <string name="username">Username</string>
    <string name="no_internet_connection">Network Unavailable</string>
    <string name="internet_check">Please verify your internet connectivity.</string>
    <string name="close">CLOSE</string>
    <string name="email_required">Email required</string>
    <!-- menu bottom navigation-->
    <string name="home">Home</string>
    <string name="products">Products</string>
    <string name="weight_grams">weight grams</string>
    <string name="cost">100</string>
    <string name="new_29_off">29% off</string>
    <string name="stock_details">Stock</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="account_settings">Account Settings</string>
    <string name="admin_information">Factory Information</string>

    <string name="today_offers">Today Offers</string>
    <string name="get_up_to_50_off_on_selected_products_during_our_flash_sale">Get up to 50% off on selected products during our Flash Sale!</string>
    <string name="offers">Offers</string>
    <string name="_150">150</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="enter_discount">Enter Discount in Persentage</string>
    <string name="discount">Discount</string>
    <string name="discount_price">Discount Price</string>
    <string name="enter_discount_price">Enter Discount price</string>
    <string name="quantity">Quantity</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="enter_description">Enter Description</string>
    <string name="flash_sale_image">Select Image source</string>
    <string name="upload">Upload</string>
    <string name="price">Price</string>
    <string name="enter_price">Enter Price</string>
    <string name="upload_cat">Upload Categories</string>
    <string name="look_up_products_by_name">Look up products by name</string>
    <string name="merchant_approval">Merchant</string>
    <string name="product_approval">Products</string>
    <string name="pincode">Pincode :</string>
    <string name="gst_number">GST Number :</string>
    <string name="merchant_verification">Merchant Verification</string>
    <string name="accept">Approve</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="categories">Categories</string>
    <string name="approve_all"><u>Approve All</u></string>
    <string name="add">Add</string>
    <string name="sub_categories">Sub Categories</string>
</resources>