<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home">
  <fragment
      android:id="@+id/home"
      android:name="com.wingspan.adminpanel.fragments.HomeFragment"
      android:label="@string/merchant_approval"
      tools:layout="@layout/fragment_home">
     </fragment>
  <fragment
    android:id="@+id/merchant_verify"
      android:name="com.wingspan.adminpanel.fragments.MerchantApprovals"
    android:label="@string/merchant_approval"
      tools:layout="@layout/fragment_merchant"
      />

  <fragment
      android:id="@+id/prod_approval"
      android:name="com.wingspan.adminpanel.fragments.MerchantProductsArrovalFragment"
      android:label="@string/product_approval"
      tools:layout="@layout/fragment_merchant_products_arroval"/>


  <fragment
      android:id="@+id/account"
      android:name="com.wingspan.adminpanel.fragments.AccountFragment"
      android:label="@string/account"
      tools:layout="@layout/fragment_account"/>
</navigation>