<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="InefficientWeight,UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/HeadingTextStyle_black"

            android:text="@string/no_internet_connection"
            />

        <TextView
            android:id="@+id/total_cost"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/NormalTextStyle_black"
            android:padding="2dp"
            android:gravity="center"
            android:text="@string/internet_check"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/close"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/close"
            style="@style/NormalTextStyle_white"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:background="@drawable/button_bg_green"
            />
    </LinearLayout>

</LinearLayout>