<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.OffersFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        android:background="@color/textgrey"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:id="@+id/flashsale"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessLeaf"
            android:padding="16dp"
            android:background="@drawable/gradient_pink_background">
            <TextView
                android:id="@+id/flash_sale_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flash_sale"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/flash_sale_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Get up to 50% off on selected products during our Flash Sale!"
                android:textSize="14sp"
                android:textColor="@color/white" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        android:background="@color/textgrey"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:id="@+id/new_arrivals"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessLeaf"
            android:padding="16dp"
            android:background="@drawable/gradient_yellow_background">
            <TextView
                android:id="@+id/flash_sale_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_arrivals"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/flash_sale_description1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Get up to 50% off on selected products during our Flash Sale!"
                android:textSize="14sp"
                android:textColor="@color/white"
                tools:ignore="HardcodedText" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        android:background="@color/textgrey"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:id="@+id/today_offers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessLeaf"
            android:padding="16dp"
            android:background="@drawable/gradient_blue_background">
            <TextView
                android:id="@+id/flash_sale_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_offers"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/flash_sale_description2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/get_up_to_50_off_on_selected_products_during_our_flash_sale"
                android:textSize="14sp"
                android:textColor="@color/white" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>